Fixed typos, improved exception handling, and enhanced documentation in FTP and FileSystem Clients.